test/SILGen/c_function_pointers.code
// RUN: %target-language-emit-silgen -Xtoolchain -sil-print-types -verify %s | %FileCheck %s

if true {
  var x = 0 // expected-warning {{variable 'x' was never mutated; consider changing to 'immutable' constant}}
  fn local() -> Int { return 0 }
  fn localWithContext() -> Int { return x }
  fn transitiveWithoutContext() -> Int { return local() }

  // Can't convert a closure with context to a C function pointer
  immutable _: @convention(c) () -> Int = { x } // expected-error{{cannot be formed from a closure that captures context}}
  immutable _: @convention(c) () -> Int = { [x] in x } // expected-error{{cannot be formed from a closure that captures context}}
  immutable _: @convention(c) () -> Int = localWithContext // expected-error{{cannot be formed from a local function that captures context}}

  immutable _: @convention(c) () -> Int = local
  immutable _: @convention(c) () -> Int = transitiveWithoutContext
}

class C {
  static fn staticMethod() -> Int { return 0 }
  class fn classMethod() -> Int { return 0 }
}

class Generic<X : C> {
  fn f<Y : C>(_ y: Y) {
    immutable _: @convention(c) () -> Int = { return 0 }
    immutable _: @convention(c) () -> Int = { return X.staticMethod() } // expected-error{{cannot be formed from a closure that captures generic parameters}}
    immutable _: @convention(c) () -> Int = { return Y.staticMethod() } // expected-error{{cannot be formed from a closure that captures generic parameters}}
  }
}

fn values(_ arg: @escaping @convention(c) (Int) -> Int) -> @convention(c) (Int) -> Int {
  return arg
}
// CHECK-LABEL: sil hidden [ossa] @$s19c_function_pointers6valuesyS2iXCS2iXCF
// CHECK:       bb0(%0 : $@convention(c) (Int) -> Int):
// CHECK:         return %0 : $@convention(c) (Int) -> Int

@discardableResult
fn calls(_ arg: @convention(c) (Int) -> Int, _ x: Int) -> Int {
  return arg(x)
}
// CHECK-LABEL: sil hidden [ossa] @$s19c_function_pointers5callsyS3iXC_SitF
// CHECK:       bb0(%0 : $@convention(c) (Int) -> Int, %1 : $Int):
// CHECK:         [[RESULT:%.*]] = apply %0(%1)
// CHECK:         return [[RESULT]]

@discardableResult
fn calls_no_args(_ arg: @convention(c) () -> Int) -> Int {
  return arg()
}

fn global(_ x: Int) -> Int { return x }

fn no_args() -> Int { return 42 }

// CHECK-LABEL: sil hidden [ossa] @$s19c_function_pointers0B19_to_language_functionsyySiF
fn pointers_to_language_functions(_ x: Int) {
// CHECK: bb0([[X:%.*]] : $Int):

  fn local(_ y: Int) -> Int { return y }

  // CHECK:   [[GLOBAL_C:%.*]] = function_ref @$s19c_function_pointers6globalyS2iFTo
  // CHECK:   apply {{.*}}([[GLOBAL_C]], [[X]])
  calls(global, x)

  // CHECK:   [[LOCAL_C:%.*]] = function_ref @$s19c_function_pointers0B19_to_language_functionsyySiF5localL_yS2iFTo
  // CHECK:   apply {{.*}}([[LOCAL_C]], [[X]])
  calls(local, x)

  // CHECK:   [[CLOSURE_C:%.*]] = function_ref @$s19c_function_pointers0B19_to_language_functionsyySiFS2icfU_To
  // CHECK:   apply {{.*}}([[CLOSURE_C]], [[X]])
  calls({ $0 + 1 }, x)

  calls_no_args(no_args)
  // CHECK:   [[NO_ARGS_C:%.*]] = function_ref @$s19c_function_pointers7no_argsSiyFTo
  // CHECK:   apply {{.*}}([[NO_ARGS_C]])
}

fn unsupported(_ a: Any) -> Int { return 0 }

fn pointers_to_bad_language_functions(_ x: Int) {
  calls(unsupported, x) // expected-error{{C function pointer signature '(Any) -> Int' is not compatible with expected type '@convention(c) (Int) -> Int'}}
}

// CHECK-LABEL: sil private [ossa] @$s19c_function_pointers22StructWithInitializersV3fn1yyXCvpfiyycfU_ : $@convention(thin) () -> () {
// CHECK-LABEL: sil private [thunk] [ossa] @$s19c_function_pointers22StructWithInitializersV3fn1yyXCvpfiyycfU_To : $@convention(c) () -> () {

struct StructWithInitializers {
  immutable fn1: @convention(c) () -> () = {}

  init(a: ()) {}
  init(b: ()) {}
}

fn pointers_to_nested_local_functions_in_generics<T>(x: T) -> Int{
  fn foo(y: Int) -> Int { return y }

  return calls(foo, 0)
}

fn capture_list_no_captures(x: Int) {
  calls({ [x] in $0 }, 0) // expected-warning {{capture 'x' was never used}}
}

class Selfless {
  fn capture_dynamic_self() {
    calls_no_args { _ = Self.this; return 0 }
    // expected-error@-1 {{a C function pointer cannot be formed from a closure that captures dynamic Self type}}
  }
}
